feat():add fetch route in gateway
here add the fetch order route in gateway and regenerate order
