# SA01-grpc-api-gateway/cmd/api/docs/swagger.yaml
@@ -45,15 +45,8 @@ info:
   contact: {}
 paths:
   /order:
-    put:
-      operationId: Updateorder
-      parameters:
-      - description: Update Order Detials
-        in: body
-        name: updateorderdetials
-        required: true
-        schema:
-          $ref: '#/definitions/github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_domain.UpdateOrder'
+    get:
+      operationId: Fetchorder
       produces:
       - application/json
       responses:
@@ -67,10 +60,9 @@ paths:
             $ref: '#/definitions/github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_utils_response.Response'
       security:
       - BearerAuth: []
-      summary: Update Order
+      summary: Fetch Order
       tags:
       - Order
-  /order/:
     post:
       operationId: createorder
       parameters:
@@ -94,6 +86,31 @@ paths:
       security:
       - BearerAuth: []
       summary: Create Order
+      tags:
+      - Order
+    put:
+      operationId: Updateorder
+      parameters:
+      - description: Update Order Detials
+        in: body
+        name: updateorderdetials
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_domain.UpdateOrder'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_utils_response.Response'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_utils_response.Response'
+      security:
+      - BearerAuth: []
+      summary: Update Order
       tags:
       - Order
 swagger: "2.0"
