# SA01-grpc-api-gateway/pkg/order/routes.go
@@ -16,7 +16,8 @@ func RegisterRoutes(r *gin.Engine, c *config.Config) *ServiceClient {
 
 	// order.Use(auth.AuthRequired)
 	order.POST("/", svc.CreateOrder)
-	order.PUT("/",svc.UpdateOrder)
+	order.PUT("/", svc.UpdateOrder)
+	order.GET("/", svc.FetchOrder)
 
 	return svc
 }
@@ -26,4 +27,7 @@ func (svc *ServiceClient) CreateOrder(ctx *gin.Context) {
 }
 func (svc *ServiceClient) UpdateOrder(ctx *gin.Context) {
 	routes.UpdateOrder(ctx, svc.Client)
+}
+func (svc *ServiceClient) FetchOrder(ctx *gin.Context) {
+	routes.FetchOrder(ctx, svc.Client)
 }
